# text2midi

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  MANUAL_USUARIO.md  cli_reference.md  comparación-del-poc.md  comparación-descripción-natural.md  implementation.md
notebooks/: evaluacion_flujos.ipynb  evaluacion_flujos.py  text2midi_poc.ipynb  text2midi_poc.py  text2midi_train.ipynb  text2midi_train.py
outputs/evaluacion-estructura/: gen-1-gemma.mid  gen-2-gemma.mid  gen-3-gemma.mid
outputs/evaluacion-notebook/: midillm_resultado.mid  text2midi_resultado.mid
outputs/evaluación-intencion/: midillm_base.mid  midillm_midicaps_format.mid  text2midi_base.mid  text2midi_midicaps_format.mid
outputs/poc-experiment/: midillm.mid  text2midi.mid
skills/hexagonal-python/: SKILL.md
src/: __init__.py  cli.py  pipeline.py
src/adapters/: __init__.py  exceptions.py
src/config/: __init__.py  profiles.py
src/domain/: __init__.py  entities.py  interfaces.py  remi_vocab.py
src/models/: __init__.py  transformer_model.py
src/use_cases/: __init__.py  best_of_n_search.py  progressive_search.py  token_heuristics.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_passthrough.py  test_pipeline.py  test_progressive_search.py
tests/adapters/: test_exceptions.py
tests/config/: test_profiles.py
tests/domain/: __init__.py  test_batch_midi_generator_interface.py  test_entities.py  test_remi_vocab.py
tests/integration/: conftest.py  test_google_ai_integration.py
tests/use_cases/: test_best_of_n_search.py  test_progressive_search.py  test_token_heuristics.py
(+22 files in other folders)
