[project]
name = "proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.0.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "st-moe-pytorch>=0.1.0",
    "miditok>=3.0.0",
    "symusic>=0.1.0",
    "einops>=0.8.0",
    "pretty-midi>=0.2.11",
    "pyfluidsynth>=1.3.4",
]

[project.optional-dependencies]
clap = [
    "laion-clap>=1.0.0",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
]

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
